--- a/NineMensMorris/app/src/main/res/layout/activity_main.xml
+++ b/NineMensMorris/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.NineMensMorris.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.NineMensMorris.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:theme="@style/Theme.NineMensMorris.AppBarOverlay"
+            tools:ignore="MissingConstraints">
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/Theme.NineMensMorris.PopupOverlay" />
 
-    <include layout="@layout/content_main" />
+        </com.google.android.material.appbar.AppBarLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        <GridLayout
+            android:background="@drawable/ninemenmorris"
+            android:id="@+id/simpleGridView"
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            android:orientation="vertical"
+            android:columnCount="3"
+            android:rowCount="3"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="8dp"
+            android:layout_gravity="center">
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+            <Button
+                android:id="@+id/button"
+                android:text="@string/button"
+                android:layout_column="0"
+                android:layout_row="0"
+                android:height="30dp"
+                android:width="30dp" />
+
+            <Button
+                android:id="@+id/button2"
+                android:text="Button"
+                android:layout_column="1"
+                android:layout_row="0"
+                android:height="30dp"
+                android:width="30dp"/>
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:text="Button"
+                android:height="30dp"
+                android:width="30dp"/>
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:width="30dp"
+                android:height="30dp"
+                android:text="Button"/>
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_row="1"
+                android:layout_column="2"
+                android:text="Button"
+                android:height="30dp"
+                android:width="30dp"/>
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:width="30dp"
+                android:height="30dp"
+                android:text="Button"/>
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:text="Button"
+                android:height="30dp"
+                android:width="30dp"/>
+            <Button
+                android:id="@+id/button8"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:text="Button"
+                android:height="30dp"
+                android:width="30dp"/>
+
+            <Button
+                android:id="@+id/button9"
+                android:layout_row="2"
+                android:layout_column="2"
+                android:text="Button"
+                android:height="30dp"
+                android:width="30dp"/>
+
+
+        </GridLayout>
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
