--- a/NineMensMorris/app/src/main/res/layout/activity_main.xml
+++ b/NineMensMorris/app/src/main/res/layout/activity_main.xml
@@ -383,7 +383,8 @@
         android:layout_marginBottom="50dp"
         android:text="@string/testButton1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="@{viewModel::switchPlayer}"/>
 
     <Button
         android:id="@+id/testButton2"
